tab was becoming invisible for large code now editor has fixed size

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,3 @@ div > input{
     border: none;
     outline: none;
 }
-
-.floating-tab-button:hover ~ .tabs{
-    display: flex;
-}
